--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "LekoArts",
   "license": "0BSD",
   "starter-name": "gatsby-starter-minimal-blog",
+  "engines": {
+    "node": ">=20.0.0"
+},
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
